--- a/configs/lemon-config.yaml
+++ b/configs/lemon-config.yaml
@@ -1,35 +1,22 @@
-- name: Client Count
-  dataSourceType: RDBMS
-  dataSourceSpringBeanName: dataSource
-  dbObjectName: client_count
+- name: Clients
+  jdbcTemplateName: jdbcTemplate
   visualizations:
-   - pie:
-      name: Device Type Count
-      categoryField: device_type
-      categoryValue: COUNT
-      dataTransfomerClass: com.foo.MyClass
-      dataPushFrequencyInSeconds: 2
-   - line:
-      name: Bandwidth Consumed
-      xAxisField: timestamp
-      yAxisField: totalBandwidthConsumed
-      dataTransfomerClass: com.foo.MyClass
-      dataPushFrequencyInSeconds: 2
-   - multiline:
-      name: Device Type Bandwidth Consumption
-      xAxisField: a
-      yAxisFields: [b,c]
-      dataPushFrequencyInSeconds: 2
-   - bar:
-      name: Device Total Utilization
-      xAxisField: timestamp
-      yAxisField: totalBandwidthConsumed
-      dataTransfomerClass: com.foo.MyClass
-      dataPushFrequencyInSeconds: 2
-   - json:
-      name: Client Names And Locations Raw
-      dataTransfomerClass: com.foo.MyClass
-      dataPushFrequencyInSeconds: 2
+   - id: DeviceTypeCount
+     type: pie
+     dataTransfomerClass: com.foo.MyClass
+     sql: "select client_type, count(client_type) from clients_activity  where client_status='active' group by client_type"
+     dataPushFrequencyInSeconds: 2
+     disableDatabasePolling: true
+     scaleInstances: 2
+   - id: DeviceUsageTrend
+     type: line
+     dataTransfomerClass: com.foo.MyClass
+     sql: "select client_type, count(client_type) from clients_activity  where client_status='active' group by client_type"
+     dataPushFrequencyInSeconds: 2
+     disableDatabasePolling: true
+     scaleInstances: 2
+
+
 
 
 
