working version with charts (pie as o now)

--- a/configs/lemon-config.yaml
+++ b/configs/lemon-config.yaml
@@ -4,18 +4,13 @@
    - id: DeviceTypeCount
      type: pie
      sql: "select client_type, count(client_type) from clients_activity  where client_status='active' group by client_type"
-     dataPushFrequencyInSeconds: 2
-     disableDatabasePolling: true
-   - id: RoutersMemoryAvgUtilizationTimeSeries
-     type: line
-     sql: "select now(), avg(memory_utilization) from clients_activity  where client_status='active' and client_type='router'"
-     dataPushFrequencyInSeconds: 2
-     disableDatabasePolling: true
-   - id: SwitchesMemoryAvgUtilizationTimeSeries
-     type: line
-     sql: "select now(), avg(memory_utilization) from clients_activity  where client_status='active' and client_type='switches'"
-     dataPushFrequencyInSeconds: 2
-     disableDatabasePolling: true
+     dbPushEnabled: true
+
+   - id: SecondOne
+     type: pie
+     sql: "select client_type, avg(memory_utilization) from clients_activity  where client_status='active' group by client_type"
+     staleDataNoMoreThanSeconds: 2
+     dbPushEnabled: false
 
 
 
