--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,13 @@
             <version>1.7.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>lemon</finalName>
